--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^8.0.0-beta.2",
     "astro": "^5.0.0-beta.1",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
